# vector-bench

./: .dockerignore  .gitignore  Dockerfile  README.md  SCREENSHOTS.md  docker-compose.yml  pyproject.toml
app/: Get_Started.py
app/pages/: 1_Dataset.py  2_Chunking_Playground.py  3_Embed.py  4_Search.py  5_Evaluate.py  6_Explorer.py
tests/: conftest.py  test_chunking.py  test_embedding.py  test_metrics.py  test_runner.py  test_store.py
vectorbench/chunking/: __init__.py  base.py  document.py  fixed.py  overlapping.py  paragraph.py  sentence.py
vectorbench/data/: loader.py
vectorbench/data/samples/: ground_truth.json  news_articles.txt  scientific_paper.txt  wikipedia_ai.txt
vectorbench/embedding/: __init__.py  base.py  cache.py  registry.py  sentence_transformer.py
vectorbench/evaluation/: comparison.py  metrics.py
vectorbench/experiment/: config.py  registry.py  runner.py
vectorbench/reduction/: reducer.py
vectorbench/store/: base.py  chroma.py
vectorbenchapp/: Get_Started.py  state.py
vectorbenchapp/components/: chunk_preview.py  embedding_table.py  scatter_plot.py
vectorbenchapp/pages/: 1_Dataset.py  2_Chunking_Playground.py  3_Embed.py  4_Search.py  5_Evaluate.py  6_Explorer.py
